# sinatra

./: .gitignore  CMakeLists.txt  README.rst
app/: CMakeLists.txt  app.c
cmake/: sinatra_options.cmake  sinatra_python.cmake  sinatra_utils.cmake
include/sinatra/: vector.h
modules/: CMakeLists.txt
modules/Bindings/Python/: CMakeLists.txt
modules/Bindings/Python/packaging/: pyproject.toml  setup.cfg  setup.py
modules/Clustering/: CMakeLists.txt
modules/Core/: CMakeLists.txt  vector.c
